Files Added and Modified

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-
 mongoose_url = "mongodb+srv://ContactManager:3members_cm@clustercontactmanager.hslzcbj.mongodb.net/?retryWrites=true&w=majority"
+SECRET = "RESTAPIAUTH" ;
