--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "main project backend",
   "main": "index.js",
   "scripts": {
+    "start" : "nodemon index",
+    "dev" : "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,14 +19,14 @@
   },
   "homepage": "https://github.com/Aniket-2608/CONTACT-MANAGER-SERVER#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.1",
-    "multer": "^1.4.5-lts.1",
+    "mongoose": "^6.8.2",
     "nodemon": "^2.0.20"
   }
 }
