--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGOOSE_URL=mongodb+srv://ContactManager:3members_cm@clustercontactmanager.hslzcbj.mongodb.net/?retryWrites=true&w=majority
-SECRET=RESTAPIAUTH
+MONGOOSE_URL="mongodb+srv://ContactManager:3members_cm@clustercontactmanager.hslzcbj.mongodb.net/?retryWrites=true&w=majority"
+SECRET="RESTAPIAUTH"
